[project]
name = "govbiz_mon"
version = "0.1.0"
description = "Web monitoring tool for government & startup project notices with multi-channel notifications (Telegram, Google Chat, Discord, Slack)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastapi>=0.135.2",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "schedule>=1.2.2",
    "selenium>=4.11.0",
    "uvicorn>=0.42.0",
    "webdriver-manager>=4.0.2",
]
